Try fix position for body to avoid move on mobile swipe

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   background: url("assets/water_drop.gif") no-repeat fixed center center;
   background-size:cover;
+  position: fixed;
 }
 header{
   display: flex;
